--- a/SportsOrganizer.Server/Resources/Pages/Admin/BackupAndRestore.en.resx
+++ b/SportsOrganizer.Server/Resources/Pages/Admin/BackupAndRestore.en.resx
@@ -123,6 +123,24 @@
   <data name="BtnRestore" xml:space="preserve">
     <value>Restore</value>
   </data>
+  <data name="Cancel" xml:space="preserve">
+    <value>Cancel</value>
+  </data>
+  <data name="CheckFile" xml:space="preserve">
+    <value>Check uploaded file!</value>
+  </data>
+  <data name="ChooseFile" xml:space="preserve">
+    <value>Choose a file...</value>
+  </data>
+  <data name="Confirm" xml:space="preserve">
+    <value>Confirm</value>
+  </data>
+  <data name="ConfirmRestoration" xml:space="preserve">
+    <value>Confirm Restoration</value>
+  </data>
+  <data name="ErrorToast" xml:space="preserve">
+    <value>There has been an error!</value>
+  </data>
   <data name="p1" xml:space="preserve">
     <value>Welcome to the Backup &amp; Restore page!</value>
   </data>
@@ -140,5 +158,11 @@
   </data>
   <data name="PageTitle" xml:space="preserve">
     <value>Backup &amp; restore</value>
+  </data>
+  <data name="RestorationQuestion" xml:space="preserve">
+    <value>Do you really want to restore the application?</value>
+  </data>
+  <data name="SuccessToast" xml:space="preserve">
+    <value>Restoration successful!</value>
   </data>
 </root>
